[package]
name = "gba_slotmap"
version = "1.0.6"  # Remember to grep and update version everywhere.
edition = "2021"
authors = ["Orson Peters <orsonpeters@gmail.com>", "Nicola Papale"]
description = "Constant size slotmap with 32 bits keys"
license = "Zlib"
repository = "https://github.com/devildahu/gba-slotmap"
readme = "README.md"
keywords = ["slotmap", "storage", "allocator", "arena", "reference"]
categories = ["data-structures", "memory-management", "caching"]

[features]
default = ["std"]
unstable = []
std = ["arrayvec/std"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
fxhash = "0.2.1"
quickcheck = "0.9"

[build-dependencies]
version_check = "0.9"

[workspace]
